@@ -15,7 +15,6 @@ import org.jsoup.nodes.Element;
 
 import com.rarchives.ripme.ripper.AbstractHTMLRipper;
 import com.rarchives.ripme.ripper.DownloadThreadPool;
-import com.rarchives.ripme.ui.RipStatusMessage.STATUS;
 import com.rarchives.ripme.utils.Http;
 import com.rarchives.ripme.utils.Utils;
 import org.jsoup.select.Elements;
@@ -61,7 +60,7 @@ public class MotherlessRipper extends AbstractHTMLRipper {
         if (!notHome) {
             StringBuilder newPath = new StringBuilder(path);
             newPath.insert(2, "M");
-            firstURL = new URL(this.url, "https://" + DOMAIN + newPath);
+            firstURL = URI.create("https://" + DOMAIN + newPath).toURL();
             LOGGER.info("Changed URL to " + firstURL);
         }
         return Http.url(firstURL).referrer("https://motherless.com").get();
@@ -69,6 +68,7 @@ public class MotherlessRipper extends AbstractHTMLRipper {
 
     @Override
     public Document getNextPage(Document doc) throws IOException, URISyntaxException {
+
         Elements nextPageLink = doc.head().select("link[rel=next]");
         if (nextPageLink.isEmpty()) {
             throw new IOException("Last page reached");
@@ -111,7 +111,7 @@ public class MotherlessRipper extends AbstractHTMLRipper {
     @Override
     protected void downloadURL(URL url, int index) {
         // Create thread for finding image at "url" page
-        MotherlessImageThread mit = new MotherlessImageThread(url, index);
+        MotherlessImageRunnable mit = new MotherlessImageRunnable(url, index);
         motherlessThreadPool.addThread(mit);
         try {
             Thread.sleep(IMAGE_SLEEP_TIME);
@@ -150,15 +150,19 @@ public class MotherlessRipper extends AbstractHTMLRipper {
         throw new MalformedURLException("Expected URL format: https://motherless.com/GIXXXXXXX, got: " + url);
     }
 
-
+    @Override
+    protected DownloadThreadPool getThreadPool() {
+        return motherlessThreadPool;
+    }
+    
     /**
      * Helper class to find and download images found on "image" pages
      */
-    private class MotherlessImageThread implements Runnable {
+    private class MotherlessImageRunnable implements Runnable {
         private final URL url;
         private final int index;
 
-        MotherlessImageThread(URL url, int index) {
+        MotherlessImageRunnable(URL url, int index) {
             super();
             this.url = url;
             this.index = index;
